# coding-cpp-cmake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  README.md  txt2html.cpp  txt2html.txt
common/: CMakeLists.txt  common_test.cpp  fraction.c  fraction.h  gcd_lcm.c  gcd_lcm.h
count24/: CMakeLists.txt  README.md  count.c
quiz/: CMakeLists.txt  README.md  btree.cpp  coded_lock.cpp  daemon.c  daemon.h  daemon_test.c  diamond_chess.c  eight_queen.c  factorial.cpp  games_solution.cpp  greatest_sum_of_sub_array.cpp  hanoi.cpp  horse_move.c  log_err.c  log_err.h  logic_question.c  longest_common_subsequence.cpp  longest_symmetrical_length.cpp  magic_square.cpp  nine_interlocking_rings.c  nine_linked_rings.c  null_obj.cpp  reverse_words_in_sentence.cpp  run.c  run_cmd.c  run_cmd.h  run_cmd_test.c  set_env_from_file.c  set_env_from_file.h  set_env_from_file_test.cpp  shared_ptr.cpp  socket.c  socket.h  socket_test.c  sort_list_and_remove_dup.cpp  sudoku.c
terminal_game/: CMakeLists.txt  mine.c  pick.c  sokoban.c  term_linux.c  term_linux.h
wx/: CMakeLists.txt  my_app.cpp  my_app.h  my_frame.cpp  my_frame.h
wx/frame/: CMakeLists.txt  my_app.cpp  my_app.h  my_frame.cpp  my_frame.h
wx/text/: CMakeLists.txt  TextCtrlTest.cpp
