add_library(term_linux term_linux.c term_linux.h)
add_exe(mine mine.c)
target_link_libraries(mine PRIVATE term_linux)
add_exe(pick pick.c)
target_link_libraries(pick PRIVATE term_linux)
add_exe(sokoban sokoban.c)
target_link_libraries(sokoban PRIVATE term_linux)
copy_file(copy_xsb default.xsb)
add_dependencies(sokoban copy_xsb)
